added function to get console size, started work on console buffer.

--- a/MPConsoleGame/MPConsoleGame.vcxproj.filters
+++ b/MPConsoleGame/MPConsoleGame.vcxproj.filters
@@ -15,8 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MPConsoleGame.cpp">
+    <ClCompile Include="src\MPConsoleGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ConsoleMng.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="includes\ConsoleMng.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
