--- a/MPConsoleGame/MPConsoleGame.vcxproj.filters
+++ b/MPConsoleGame/MPConsoleGame.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\SinglePlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Pawn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\ScreenManager.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="includes\SinglePlayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\Pawn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
