--- a/MPConsoleGame/MPConsoleGame.vcxproj.filters
+++ b/MPConsoleGame/MPConsoleGame.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\Pawn.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\LogSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\ScreenManager.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="includes\Pawn.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\LogSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
